export class AlgorithmicMatcher {}