export interface Merger {

}