export interface MaskPolicy {
    mask(raw: string): string;
}